Fixed broken links in mobile_portal.

--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -19,7 +19,7 @@
     <div class="container">
 
     <div class="strapline">
-        <a href="/">
+        <a href="{% url core_index %}">
             <img src="{{ MEDIA_URL }}png/header.png" alt="Oxford Mobile Portal"/>
         </a>
     </div>
