--- a/mobile_portal/mobile_portal/templates/contact/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/base.xhtml
@@ -1,1 +1,7 @@
 {% extends "base.xhtml" %}
+
+{% block breadcrumbs %}
+{{ block.super }}
+    <li><a href="{% url contact_index %}">Contact search</a></li>
+{% endblock %}
+
