--- a/mobile_portal/mobile_portal/templates/webcams/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/base.xhtml
@@ -2,6 +2,6 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-    <li><a href="{% url maps_index %}">Maps</a></li>
+    <li><a href="{% url webcams_index %}">Webcams</a></li>
 {% endblock %}
 
