--- a/mobile_portal/mobile_portal/site-media/css/core/index.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index.css
@@ -14,3 +14,11 @@ li#menu-emergency {
     background-image:url('../../png/emergency.png');
 }
 
+li#menu-podcasts {
+    background-image:url('../../png/podcasts.png');
+}
+
+li#menu-webcams {
+    background-image:url('../../png/webcams.png');
+}
+
