--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -7,12 +7,21 @@
     {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css"/>
     {% endblock %}
+    {% block extrahead %}{% endblock %}
+    
 
     <script type="text/javascript">
         require_location = {{ require_location|yesno:"true,false" }};
     </script>
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
-    <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>    
+    <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
+    
+    {% for path in device_specific_media.js %}
+    <script src="{{ MEDIA_URL }}{{ path }}" type="text/javascript"></script>    
+    {% endfor %}
+    {% for path in device_specific_media.css %}
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{ path }}"/>    
+    {% endfor %}
   </head>
 
   <body>
@@ -23,6 +32,12 @@
             <img src="{{ MEDIA_URL }}png/header.png" alt="Oxford Mobile Portal"/>
         </a>
     </div>
+    
+    <ol class="breadcrumbs">
+{% block breadcrumbs %}
+        <li><a href="{% url core_index %}">Home</a></li>
+{% endblock %}
+    </ol>
 
     <div class="content">
 {% block content %}
