--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -7,9 +7,9 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-    <p><a href="/webauth/logout/">Log out of WebAuth</a></p>
+    <p>Logged in as <strong>{{ user.get_profile.webauth_username }}</strong> | <a href="{% url auth_logout %}">Log out of WebAuth</a></p>
     {% else %}
-    <p><a href="/webauth/login/">Log in using WebAuth for more features</a></p>
+    <p><a href="{% url webauth_login %}">Log in using WebAuth for more features</a></p>
     {% endif %}
 
     <h1 class="nodisplay">Home</h1>
@@ -31,11 +31,15 @@
       <li id="menu-emergency">
           <a href="{% url core_crisis %}">Crisis contacts</a>
       </li>
-      <li id="menu-emergency">
+      <li id="menu-podcasts">
           <a href="{% url podcasts_index %}">Podcasts</a>
       </li>
       <li id="menu-emergency">
           <a href="{% url results_index %}">Exam results</a>
+      </li>
+
+      <li id="menu-webcams">
+          <a href="{% url webcams_index %}">Webcams</a>
       </li>
     </ul>
     
@@ -65,7 +69,7 @@
 {% endif %}
         <script type="text/javascript">
             if (navigator.geolocation.getCurrentPosition)
-                $('#location_update').append(' <a href="#" onclick="javascript:requestPosition();">Determine automatically</a>');
+                $('#location_update').append(' <a href="#" onclick="javascript:requestPosition();">Determine automatically<\/a>');
         </script>
     </div>
     <hr/>
@@ -80,5 +84,22 @@
     <div class="section">
         <h2>Session</h2>
         <p>{{ session }}</p>
+    </div>
+
+    <hr/>
+    <div class="section">
+        <h2>Device</h2>
+        <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
+    </div>
+    
+    <hr/>
+    <div class="section">
+        <h2>Meta</h2>
+        <dl>
+{% for a,b in meta.items %}
+            <dt>{{ a }}</dt>
+            <dd>{{ b }}</dd>
+{% endfor %}
+        </dl>
     </div>
 {% endblock %}
