--- a/mobile_portal/mobile_portal/templates/maps/place_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/place_list.xhtml
@@ -1,5 +1,11 @@
 {% extends "maps/base.xhtml" %}
 
+{% block breadcrumbs %}
+{{ block.super }}
+    <li><a href="{% url maps_nearest type %}">Nearest {{ type }}</a></li>
+{% endblock %}
+
+
 {% block content %}
 
 <ol>
