--- a/mobile_portal/mobile_portal/templates/results/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/results/index.xhtml
@@ -1,5 +1,11 @@
 {% extends "base.xhtml" %}
 
+{% block breadcrumbs %}
+{{ block.super }}
+    <li><a href="{% url results_index %}">Exam results</a></li>
+{% endblock %}
+
+
 {% block content %}
 
 <h1>Results releases</h1>
