--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -7,11 +7,11 @@
     {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css"/>
     {% endblock %}
-    {% block extrahead %}{% endblock %}
     
 
     <script type="text/javascript">
         require_location = {{ require_location|yesno:"true,false" }};
+        site_media = "{{ MEDIA_URL }}";
     </script>
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
@@ -22,6 +22,9 @@
     {% for path in device_specific_media.css %}
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{ path }}"/>    
     {% endfor %}
+    
+    {% block extrahead %}{% endblock %}
+    
   </head>
 
   <body>
@@ -31,7 +34,31 @@
         <a href="{% url core_index %}">
             <img src="{{ MEDIA_URL }}png/header.png" alt="Oxford Mobile Portal"/>
         </a>
-    </div>
+       
+        <div class="login">
+{% if user.is_authenticated %}
+            <a href="{% url auth_logout %}">
+                <img src="{{ MEDIA_URL }}png/logout.png"
+                     alt="Log out of WebAuth"
+                     title="Currently logged in as {{ common_name }}" />
+            </a>
+{% else %}
+            <a href="{% url webauth_login %}">
+                <img src="{{ MEDIA_URL }}png/logout.png"
+                     alt="Log in using WebAuth"
+                     title="Log in using WebAuth for more features" />
+            </a>
+{% endif %}
+        </div>
+
+        <div class="weather">
+            <img src="{{ MEDIA_URL }}png/weather/{{ weather_icon }}.png" alt="{{ weather.outlook|capfirst }}" title="{{ weather.outlook|capfirst }}"/>
+            <span class="temperature">{{ weather.temperature }}&#xB0;C</span>
+            <span class="wind_speed">{{ weather.wind_speed }}mph</span>
+        </div>
+     </div>
+    
+    
     
     <ol class="breadcrumbs">
 {% block breadcrumbs %}
