Added map templatetag using Yahoo! REST map interface. Added python-levenshtein requirement to README. Fixed bug where units without primary places aren't handled gracefully.

--- a/mobile_portal/mobile_portal/templates/maps/oxpoints/place.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/oxpoints/place.xhtml
@@ -1,4 +1,5 @@
 {% extends "maps/base.xhtml" %}
+{% load maps %}
 
 {% block title %}OMP | {{ resource.title }}{% endblock %}
 
@@ -23,5 +24,7 @@
 {% endif %}
     <a href="http://maps.google.co.uk/?saddr=Station@51.753468,-1.269795&amp;daddr={{ resource.google_qs_part }}&amp;dirflg=w">from the station</a>
 </p>
+
+{% map resource.location %}
 
 {% endblock %}
