--- a/mobile_portal/mobile_portal/templates/maps/oxpoints/unit.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/oxpoints/unit.xhtml
@@ -1,4 +1,5 @@
 {% extends "maps/base.xhtml" %}
+{% load maps %}
 
 {% block title %}OMP | {{ resource.title }}{% endblock %}
 
@@ -10,18 +11,27 @@
 <img src="{{ resource.in_images.0.url }}" alt="" style="float:right"/>
 {% endif %}
 
+{% if resource.homepage or resource.primary_place.location %}
 <p>
+{% if resource.homepage %}
     <a href="{{ resource.homepage.url }}">Web</a>
+{% endif %}
+{% if resource.primary_place.location %}
     <a href="http://maps.google.co.uk/?q={{ resource.primary_place.google_qs_part }}&amp;z=16">Map</a>
+{% endif %}
 </p>
+{% endif %}
 
+{% if resource.primary_place.location %}
 <p>Directions:
 {% if location %}
     <a href="http://maps.google.co.uk/?saddr=Here@{{ location|join:"," }}&amp;daddr={{ resource.primary_place.google_qs_part }}&amp;dirflg=w">from here</a> |
 {% endif %}
     <a href="http://maps.google.co.uk/?saddr=Station@51.753468,-1.269795&amp;daddr={{ resource.primary_place.google_qs_part }}&amp;dirflg=w">from the station</a>
 </p>
+{% endif %}
 
+{% if resource.occupies %}
 <h3>Occupies</h3>
 
 <ul>
@@ -29,4 +39,10 @@
     <li><a href="{% url maps_oxpoints place.id %}">{{ place.title }}</a></li>
 {% endfor %}
 </ul>
+{% endif %}
+
+{% if resource.primary_place.location %}
+{% map resource.primary_place.location %}
+{% endif %}
+
 {% endblock %}
