--- a/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -3,11 +3,10 @@
 {% block content %}
 <h1>Podcasts</h1>
 
-<dl class="podcast_list">
-{% for podcast in podcasts %}
-    <dt><a href="{% url podcasts_podcast podcast.id %}">{{ podcast.title }}</a></dt>
-    <dd>{{ podcast.description }}</dd>
+<ul class="category_list">
+{% for category in categories %}
+    <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
 {% endfor %}
-</dl>
+</ul>
 
 {% endblock %}
