Maps app now shows bus stops taken from NaPTAN data and live ETAs taken from oxontime. OSM data is also imported. Added manage.py commands (update_(osm|busstops|oxpoints)) to import data easily. Improved data display in the admin site.

--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -4,10 +4,9 @@
 
 <p>Nearest...</p>
 <ul>
-    <li><a href="{% url maps_nearest "Museum" %}">Museum</a></li>
-    <li><a href="{% url maps_nearest "College" %}">College</a></li>
-    <li><a href="{% url maps_nearest "Building" %}">Building</a></li>
-    <li><a href="{% url maps_nearest "Carpark" %}">Car park</a></li>
+{% for entity_type in entity_types %}
+    <li><a href="{% url maps_nearest entity_type.slug %}">{{ entity_type.verbose_name|capfirst }}</a></li>
+{% endfor %}
 </ul>
 
 {% endblock %}
