--- a/mobile_portal/mobile_portal/templates/maps/place_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/place_list.xhtml
@@ -2,16 +2,30 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-    <li><a href="{% url maps_nearest type %}">Nearest {{ type }}</a></li>
+    <li><a href="{% url maps_nearest entity_type.slug %}">Nearest {{ entity_type.verbose_name }}</a></li>
 {% endblock %}
-
 
 {% block content %}
 
+<p>
+    Within:
+    <a href="{% url maps_nearest_distance entity_type.slug 100 %}">100m</a>
+    <a href="{% url maps_nearest_distance entity_type.slug 200 %}">200m</a>
+    <a href="{% url maps_nearest_distance entity_type.slug 500 %}">500m</a>
+    <a href="{% url maps_nearest_distance entity_type.slug 1000 %}">1km</a>
+    <a href="{% url maps_nearest_distance entity_type.slug 2000 %}">2km</a>
+    <a href="{% url maps_nearest_distance entity_type.slug 5000 %}">5km</a>
+    <a href="{% url maps_nearest_distance entity_type.slug 10000 %}">10km</a>
+    
+
+{% if entities %}
 <ol>
-{% for object in nearby %}
-    <li><a href="{{ object.1 }}">{{ object.1.dc_title }}</a> {{ object.0|floatformat:"2" }}km</li>
+{% for entity in entities %}
+    <li><a href="{{ entity.get_absolute_url }}">{{ entity.title }}</a> {{ entity.distance.km|floatformat:3 }} km</li>
 {% endfor %}
 </ol>
+{% else %}
+<p>There isn't anything that close to you. Try updating your location or widening your search.</p>
+{% endif %}
 
 {% endblock %}
