--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -1,4 +1,5 @@
 {% extends "core/base.xhtml" %}
+{% load maps %}
 
 {% block stylesheets %}
 {{ block.super }}
@@ -52,6 +53,9 @@
             if (navigator.geolocation.getCurrentPosition)
                 $('#location_update').append(' <a href="#" onclick="javascript:requestPosition();">Determine automatically<\/a>');
         </script>
+        
+{% if location %}{% map location %}{% endif %}
+    
     </div>
     <hr/>
     <div class="section">
