Fixed logout icon Tidied up Oxpoints-exploreresque features in maps. Added core.models.ExternalImage to get and resize external images on the fly.

--- a/mobile_portal/mobile_portal/site-media/css/base.css
+++ b/mobile_portal/mobile_portal/site-media/css/base.css
@@ -25,6 +25,7 @@ h2 {
 div.header {
     background-color:#fff;
     height:46px;
+    margin-top:0;
     background-image:url('../png/header_bg.png');
     overflow:hidden;
 }
