--- a/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -7,6 +7,10 @@
 
 <h1>{{ data.dc_title }}</h1>
 
+<p>
+    <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}">Find things near here</a>
+</p>
+
 {% if data.oxp_hasHomepage or data.oxp_hasITHomepage or data.oxp_hasWeblearn %}
 <h2>Websites</h2>
 <ul>
