--- a/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
@@ -9,9 +9,15 @@
 
 <h1>{{ category.name }}</h1>
 
+<p>Show
+    <a href="{% url podcasts_category_medium category.code,"audio" %}">audio</a>
+    <a href="{% url podcasts_category_medium category.code,"video" %}">video</a>
+    <a href="{% url podcasts_category category.code %}">all</a>
+podcasts.</p>
+
 <dl class="podcast_list">
-{% for podcast in category.podcast_set.all %}
-    <dt><a href="{{ podcast.get_absolute_url }}">{{ podcast.title }}</a></dt>
+{% for podcast in podcasts %}
+    <dt><a href="{{ podcast.get_absolute_url }}">{{ podcast.title }}</a> ({{ podcast.medium }})</dt>
     <dd>{{ podcast.description }}</dd>
 {% endfor %}
 </dl>
