--- a/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -3,6 +3,10 @@
 {% block content %}
 <h1>Podcasts</h1>
 
+<p>
+    <a href="{% url podcasts_top_downloads %}">Top downloads from iTunesU</a>
+</p>
+
 <ul class="category_list">
 {% for category in categories %}
     <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
