--- a/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
@@ -2,7 +2,9 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
+{% if podcast.category %}
     <li><a href="{{ podcast.category.get_absolute_url }}">{{ podcast.category.name }}</a></li>
+{% endif %}
     <li><a href="{{ podcast.get_absolute_url }}">{{ podcast.title }}</a></li>
 {% endblock %}
 
