Corrected spelling mistake and removed extraneous number.

--- a/mobile_portal/mobile_portal/templates/core/crisis.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/crisis.xhtml
@@ -18,7 +18,7 @@
     
     <dt>University Security Services</dt>
     <dd>Emergency: <a href="tel:+441865289999">01865 (2)89999</a></dd>
-    <dd>Enquries: <a href="tel:+441865272944">01865 (2)72944</a></dd>
+    <dd>Enquiries: <a href="tel:+441865272944">01865 (2)72944</a></dd>
 
     <dt>Thames Valley Police</dt>
     <dd><a href="tel:+448458505505">0845 8505505</a> (non-emergency)</dd>
@@ -44,6 +44,4 @@
     <dd><a href="tel:+448457909090">018457 90 90 90</a></dd>
 </dl>
     
-(2)89999
-
 {% endblock %}
