--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -13,6 +13,8 @@
 
 {% block content %}
 
+<h1>{{ entity_type.verbose_name_plural|capfirst }} within {{ distance }}{% if entity %}{{ entity.title }}{% endif %}</h1>
+
 <p>
     Within:
 {% for distance in distances %}{% if entity %}
