--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -1,4 +1,4 @@
-{% extends "contact/base.xhtml" %}
+{% extends "contact/base.xhtml" %}{% load portal_misc %}
 
 {% block stylesheets %}
 {{ block.super }}
@@ -19,7 +19,7 @@
 {% ifequal method "email" %}
         <span class="email"><a href="mailto:{{ person.email }}">{{ person.email }}</a></span>
 {% else %}
-        <span class="phone">Int: {{ person.phone.0 }} &mdash; Ext: <a href="tel:{{ person.phone.1 }}">{{ person.phone.1 }}</a></span>
+        <span class="phone">Int: {{ person.phone.0 }} &mdash; Ext: {{ person.phone.1|telephone }}</span>
 {% endifequal %}
     </li>
 {% endfor %}
