--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-<h1>{{ entity_type.verbose_name_plural|capfirst }} within {{ distance }}{% if entity %}{{ entity.title }}{% endif %}</h1>
+<h1>{{ entity_type.verbose_name_plural|capfirst }} within {{ distance }}{% if entity %} of {{ entity.title }}{% endif %}</h1>
 
 <p>
     Within:
@@ -27,7 +27,7 @@
 {% if entities %}
 <ol>
 {% for entity in entities %}
-    <li><a href="{{ entity.get_absolute_url }}">{{ entity.title }}</a> {{ entity.distance.km|floatformat:3 }} km</li>
+    <li><a href="{{ entity.get_absolute_url }}">{{ entity.title }}</a> {{ entity.distance.km|floatformat:3 }} km {{ entity.bearing }}</li>
 {% endfor %}
 </ol>
 {% else %}
