--- a/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -1,7 +1,39 @@
 {% extends "podcasts/base.xhtml" %}
+{% load portal_misc %}
 
 {% block content %}
 <h1>Podcasts</h1>
+
+{% if device|device_has_parent:"apple_iphone_ver1" and show_itunesu_link %}
+{% else %}
+<div style="background-color:#002341; margin:1em; padding:0.5em; color:#ffffff; font-size:120%" id="itunesu_link_div">
+
+<p>It looks like you're using an {% if device|device_has_parent:"apple_ipod_touch_ver1" %}iPod Touch{% else %}iPhone{% endif %}!</p>
+
+<P>Podcasts are also available from the University's iTunesU site, which you can view on your device.</p>
+
+<p>Please note that this will close Safari.</p>
+
+<form method="post" action="{% url podcasts_itunesu_redirect %}">
+
+<p>
+    <input type="checkbox" name="remember" id="remember">
+    <label for="remember">
+        Remember this preference in future.
+    </label>
+</p>
+
+<p style="text-align:center">
+    <input type="submit" name="redirect" value="Go to iTunesU" />
+    <input type="submit" name="cancel" value="Stay on m.ox" id="hide_itunesu_link" />
+</p>
+
+</form>
+
+</div>
+
+{% endif %}
+
 
 <p>
     <a href="{% url podcasts_top_downloads %}">Top downloads from iTunesU</a>
