typo in busstop.xhtml was failing bus stop readings

--- a/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -1,7 +1,7 @@
 {% extends "maps/base.xhtml" %}
 {% load maps %}
 
-{% block extrahead %]
+{% block extrahead %}
     <meta http-equiv="refresh" content="45" />
 {% endblock %}
 
