--- a/mobile_portal/mobile_portal/templates/rss/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/rss/base.xhtml
@@ -1,5 +1,10 @@
 {% extends "base.xhtml" %}
 
+{% block breadcrumbs %}
+{{ block.super }}
+    <li><a href="{% url rss_index %}">News</a></li>
+{% endblock %}
+
 {% block stylesheets %}
 {{ block.super }}
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/rss.css" type="text/css"/>
