--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -16,6 +16,8 @@
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}openlayers/OpenLayers-osm.js" type="text/javascript"></script>
     
     {% for path in device_specific_media.js %}
     <script src="{{ MEDIA_URL }}{{ path }}" type="text/javascript"></script>    
