--- a/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -12,7 +12,7 @@
 {% else %}
 <h1>Find things nearby</h1>
 
-<p>Please note that we think you are near <strong>{{ placemark.address }}</strong>. If this is not correct, please update your location.</p>
+<p>Please note that we think you are near <strong>{{ preferences.location.placemark.address }}</strong>. If this is not correct, please update your location.</p>
 {% endif %}
 
 <ul>
