Added generated maps.

--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -25,6 +25,8 @@
 {% endif %}{% endfor %}
 </p>
 
+<img src="{% url osm_generated_map map_hash %}" alt=""/>
+
 {% if entities %}
 <ol>
 {% for entity in entities %}
